--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -1,7 +1,9 @@
 $white: #fff;
 $light-white: #f7f7f7;
-$dark: #555555;
-$text-bgc: #59afff;
+$dark-white: #e8e8e8;
+$dark: #3c3c3c;
+$blue: #7873f5;
+$dark-blue: #4742df;
 
 $title-color-gradient: linear-gradient(to top left, #ff721b 0%, #7873f5 100%);
 
