--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -9,7 +9,6 @@
 
 .btn-animation {
 	position: relative;
-	transition: background-color 3s;
 	overflow: hidden;
 	z-index: 0;
 	&::before {
@@ -20,12 +19,12 @@
 		left: 0;
 		height: 100%;
 		width: 100%;
-		transform: scaleX(0);
-		transition: transform 0.3s;
+		transform: translate(110%);
+		transition: transform 0.5s;
 		z-index: -1;
 	}
 	&:hover::before {
-		transform: scaleX(1);
+		transform: translate(0);
 	}
 }
 
@@ -35,25 +34,22 @@
 	width: 60%;
 	background-color: $white;
 	&__left-bottom {
-		bottom: 0;
+		bottom: -1px;
 		left: -30px;
 		transform: skewX(45deg);
 	}
 	&__right-top {
-		top: 0;
+		top: -1px;
 		right: -30px;
 		transform: skewX(45deg);
 	}
 }
 
 .section-h2 {
-	margin-bottom: 3.5rem;
+	margin: 1.5rem 0 3.5rem;
 	text-align: center;
 	text-transform: uppercase;
-	background: $title-color-gradient;
-	background-clip: border-box;
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
+	color: $blue;
 	font-size: 3rem;
 }
 
